[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ytdl"
version = "1.0.0"
description = "Descargador de YouTube interactivo: MP4 con video + audio"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2024.1.1",
    "rich>=13.0.0",
]

[project.scripts]
ytdl = "ytdl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ytdl*"]
